# pp-openmpi-rust

c-master-slave/: main.cpp  sequential.cpp
master-slave/: Cargo.toml
master-slave/src/: main.rs
sequential/: Cargo.toml
sequential/src/: main.rs
